trying to fix draft bans on mobile

--- a/frontend/src/components/mainComponents/css/draft.css
+++ b/frontend/src/components/mainComponents/css/draft.css
@@ -57,6 +57,7 @@ html::-webkit-scrollbar {
 }
 
 .teamBans { 
+    min-width: 50px;
     width: 65%;
     height: 4%;
     display: flex;
@@ -66,14 +67,15 @@ html::-webkit-scrollbar {
 .banDisplay {
     filter: grayscale(1);
     background-color: rgb(201, 201, 201);
-    height: 60%;
-    aspect-ratio: 1/1;
+    height: 20px;
+    width: 20px;
 }
 
 /* Desktop and up */
 @media (min-width: 1024px) {
     .banDisplay {
-        height: 100%;
+        height: 30px;
+        width: 30px;
     }
 }
 
